--- a/templates/partialsBack/headBack.html.twig
+++ b/templates/partialsBack/headBack.html.twig
@@ -20,5 +20,8 @@
     -->
     <link href="{{ asset('assets/css/main.css') }}" rel="stylesheet">
     <link rel="stylesheet" href="{{ asset('assets/fonts/Pe-icon-7-stroke.css') }}">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
 
 </head>
