--- a/templates/espace/show.html.twig
+++ b/templates/espace/show.html.twig
@@ -7,69 +7,34 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <span class="breadcrumb"><a href="#">Accueil</a> / Espace</span>
-        <h3>Détails de l'Espace</h3>
+        <span class="breadcrumb"><a href="{{ path('app_home') }}">Accueil</a> / Espaces</span>
+        <h3>Détails de l’Espace</h3>
       </div>
     </div>
   </div>
 </div>
 
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-lg-10">
-      <div class="card shadow-lg border-0 rounded-4 p-4">
-        <h4 class="mb-4 text-center">Informations de l'espace</h4>
-        <table class="table table-bordered">
-          <tbody>
-            <tr>
-              <th>Id</th>
-              <td>{{ espace.idEspace }}</td>
-            </tr>
-            <tr>
-              <th>Nom</th>
-              <td>{{ espace.nomEspace }}</td>
-            </tr>
-            <tr>
-              <th>Adresse</th>
-              <td>{{ espace.adresse }}</td>
-            </tr>
-            <tr>
-              <th>Capacité</th>
-              <td>{{ espace.capacite }}</td>
-            </tr>
-            <tr>
-              <th>Disponibilité</th>
-              <td>{{ espace.disponibilite }}</td>
-            </tr>
-            <tr>
-              <th>Prix</th>
-              <td>{{ espace.prix }} TND</td>
-            </tr>
-            <tr>
-              <th>Type</th>
-              <td>{{ espace.TypeEspace }}</td>
-            </tr>
-            <tr>
-              <th>Image</th>
-              <td>
-                {% if espace.image %}
-                  <img src="{{ asset('uploads/' ~ espace.image) }}" alt="Image de l'espace" class="img-thumbnail" style="max-height: 200px;">
-                {% else %}
-                  <em>Aucune image</em>
-                {% endif %}
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-        <div class="text-center mt-4">
-          <a href="{{ path('app_espace_index') }}" class="btn btn-secondary me-2">
-            <i class="fas fa-arrow-left me-1"></i> Retour à la liste
-          </a>
-          <a href="{{ path('app_espace_edit', {'idEspace': espace.idEspace}) }}" class="btn btn-warning me-2">
-            <i class="fas fa-edit me-1"></i> Modifier
-          </a>
-          {{ include('espace/_delete_form.html.twig') }}
+<div class="section properties">
+  <div class="container">
+    <div class="row properties-box justify-content-center">
+      <div class="col-lg-6 col-md-8 align-self-center mb-30 properties-items">
+        <div class="item">
+          <img src="{{ asset('uploads/' ~ espace.image) }}" alt="Image de l'espace">
+          <span class="category">{{ espace.TypeEspace }}</span>
+          <h6>{{ espace.prix }} Dt</h6>
+          <h4>{{ espace.nomEspace }}</h4>
+          <ul>
+            <li>Adresse: <span>{{ espace.adresse }}</span></li>
+            <li>Capacité: <span>{{ espace.capacite }}</span></li>
+            <li>Disponibilité: <span>{{ espace.disponibilite }}</span></li>
+          </ul>
+          <div class="main-button d-flex justify-content-between">
+            <a href="{{ path('app_espace_index') }}">Retour</a>
+            <a href="{{ path('app_espace_edit', {'idEspace': espace.idEspace}) }}">Modifier</a>
+          </div>
+          <div class="mt-3">
+            {{ include('espace/_delete_form.html.twig') }}
+          </div>
         </div>
       </div>
     </div>
