--- a/templates/espace/new.html.twig
+++ b/templates/espace/new.html.twig
@@ -12,58 +12,105 @@
 
           {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
 
+          {# Champ nomEspace : obligatoire, minimum 4 caractères #}
           <div class="mb-3">
             {{ form_label(form.nomEspace, null, {'label_attr': {'class': 'form-label'}}) }}
-            {{ form_widget(form.nomEspace, {'attr': {'class': 'form-control'}}) }}
+            {{ form_widget(form.nomEspace, {
+              'attr': {
+                'class': 'form-control',
+                'required': 'required',
+                'minlength': '4'
+              }
+            }) }}
             <div class="text-danger mt-1" style="font-size: 0.95rem;">
               {{ form_errors(form.nomEspace) }}
             </div>
           </div>
 
+          {# Champ adresse : obligatoire, minimum 4 caractères #}
           <div class="mb-3">
             {{ form_label(form.adresse) }}
-            {{ form_widget(form.adresse, {'attr': {'class': 'form-control'}}) }}
+            {{ form_widget(form.adresse, {
+              'attr': {
+                'class': 'form-control',
+                'required': 'required',
+                'minlength': '4'
+              }
+            }) }}
             <div class="text-danger mt-1" style="font-size: 0.95rem;">
               {{ form_errors(form.adresse) }}
             </div>
           </div>
 
+          {# Champ capacité : obligatoire, type number et valeur minimale 50 #}
           <div class="mb-3">
             {{ form_label(form.capacite) }}
-            {{ form_widget(form.capacite, {'attr': {'class': 'form-control'}}) }}
+            {{ form_widget(form.capacite, {
+              'attr': {
+                'class': 'form-control',
+                'required': 'required',
+                'type': 'number',
+                'min': '50'
+              }
+            }) }}
             <div class="text-danger mt-1" style="font-size: 0.95rem;">
               {{ form_errors(form.capacite) }}
             </div>
           </div>
 
+          {# Champ prix : obligatoire et de type numérique #}
           <div class="mb-3">
             {{ form_label(form.prix) }}
-            {{ form_widget(form.prix, {'attr': {'class': 'form-control'}}) }}
+            {{ form_widget(form.prix, {
+              'attr': {
+                'class': 'form-control',
+                'required': 'required',
+                'type': 'number'
+              }
+            }) }}
             <div class="text-danger mt-1" style="font-size: 0.95rem;">
               {{ form_errors(form.prix) }}
             </div>
           </div>
 
+          {# Champ Type_espace : liste déroulante, obligatoire #}
           <div class="mb-3">
             {{ form_label(form.Type_espace) }}
-            {{ form_widget(form.Type_espace, {'attr': {'class': 'form-control'}}) }}
+            {{ form_widget(form.Type_espace, {
+              'attr': {
+                'class': 'form-control',
+                'required': 'required'
+              }
+            }) }}
             <div class="text-danger mt-1" style="font-size: 0.95rem;">
               {{ form_errors(form.Type_espace) }}
             </div>
           </div>
 
+          {# Champ disponibilite : affiché en lecture seule avec valeur par défaut "Disponible" #}
           <div class="mb-3">
-  {{ form_label(form.disponibilite) }}
-  {{ form_widget(form.disponibilite, {'attr': {'class': 'form-control', 'readonly': 'readonly'}}) }}
-  <div class="text-danger mt-1" style="font-size: 0.95rem;">
-    {{ form_errors(form.disponibilite) }}
-  </div>
-</div>
+            {{ form_label(form.disponibilite) }}
+            {{ form_widget(form.disponibilite, {
+              'attr': {
+                'class': 'form-control',
+                'readonly': 'readonly'
+              },
+              'value': 'Disponible'
+            }) }}
+            <div class="text-danger mt-1" style="font-size: 0.95rem;">
+              {{ form_errors(form.disponibilite) }}
+            </div>
+          </div>
 
-
+          {# Champ image : obligatoire #}
           <div class="mb-3">
             {{ form_label(form.image) }}
-            {{ form_widget(form.image, {'attr': {'class': 'form-control'}}) }}
+            {{ form_widget(form.image, {
+              'attr': {
+                'class': 'form-control',
+                'required': 'required'
+              }
+            }) }}
             <div class="text-danger mt-1" style="font-size: 0.95rem;">
               {{ form_errors(form.image) }}
             </div>
