--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         {% include 'partials/header.html.twig' %}
 
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 
         <script src="{{ asset('assets/jquery/jquery.min.js') }}"></script>
