crud espace et organisateur dans le beck avec controle de saisie

--- a/templates/organisateur/show.html.twig
+++ b/templates/organisateur/show.html.twig
@@ -1,38 +1,61 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseBack.html.twig' %}
 
-{% block title %}Organisateur{% endblock %}
+{% block title %}Détails de l'Organisateur{% endblock %}
 
 {% block body %}
-    <h1>Organisateur</h1>
+<div class="app-main__outer">
+  <div class="app-main__inner">
+    <div class="app-page-title">
+      <div class="page-title-wrapper">
+        <div class="page-title-heading">
+          <div class="page-title-icon">
+            <i class="pe-7s-id icon-gradient bg-amy-crisp"></i>
+          </div>
+          <div>
+            Détails de l'Organisateur
+            <div class="page-title-subheading">Toutes les informations liées à cet organisateur.</div>
+          </div>
+        </div>
+        <div class="page-title-actions">
+          <a href="{{ path('app_organisateur_index') }}" class="btn btn-outline-secondary mr-2">← Retour</a>
+          <a href="{{ path('app_organisateur_edit', {'id_org': organisateur.idOrg}) }}" class="btn btn-warning">Modifier</a>
+        </div>
+      </div>
+    </div>
 
-    <table class="table">
-        <tbody>
+    <div class="main-card mb-3 card">
+      <div class="card-body">
+        <h5 class="card-title">Informations Générales</h5>
+        <table class="table table-bordered table-striped">
+          <tbody>
             <tr>
-                <th>Id_org</th>
-                <td>{{ organisateur.idOrg }}</td>
+              <th>ID</th>
+              <td>{{ organisateur.idOrg }}</td>
             </tr>
             <tr>
-                <th>Nom_org</th>
-                <td>{{ organisateur.nomOrg }}</td>
+              <th>Nom</th>
+              <td>{{ organisateur.nomOrg }}</td>
             </tr>
             <tr>
-                <th>Prenom_org</th>
-                <td>{{ organisateur.prenomOrg }}</td>
+              <th>Prénom</th>
+              <td>{{ organisateur.prenomOrg }}</td>
             </tr>
             <tr>
-                <th>Description_org</th>
-                <td>{{ organisateur.descriptionOrg }}</td>
+              <th>Description</th>
+              <td>{{ organisateur.descriptionOrg }}</td>
             </tr>
             <tr>
-                <th>Telef</th>
-                <td>{{ organisateur.telef }}</td>
+              <th>Téléphone</th>
+              <td>{{ organisateur.telef }}</td>
             </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_organisateur_index') }}">back to list</a>
-
-    <a href="{{ path('app_organisateur_edit', {'id_org': organisateur.id_org}) }}">edit</a>
-
-    {{ include('organisateur/_delete_form.html.twig') }}
+            <tr>
+              <th>Espace associé</th>
+              <td>{{ organisateur.espace.nomEspace }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
