--- a/templates/organisateur/index.html.twig
+++ b/templates/organisateur/index.html.twig
@@ -1,41 +1,67 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseBack.html.twig' %}
 
-{% block title %}Organisateur index{% endblock %}
+{% block title %}Liste des Organisateurs{% endblock %}
 
 {% block body %}
-    <h1>Organisateur index</h1>
+<div class="app-main__outer">
+  <div class="app-main__inner">
+    <div class="app-page-title">
+      <div class="page-title-wrapper">
+        <div class="page-title-heading">
+          <div class="page-title-icon">
+            <i class="pe-7s-id icon-gradient bg-sunny-morning"></i>
+          </div>
+          <div>Gestion des Organisateurs
+            <div class="page-title-subheading">Liste des organisateurs et leurs informations.</div>
+          </div>
+        </div>
+        <div class="page-title-actions">
+          <a href="{{ path('dashboard_organisateur_new_general') }}" class="btn btn-success">
+    <i class="pe-7s-plus mr-2"></i> Ajouter un Organisateur
+</a>
 
-    <table class="table">
-        <thead>
+        </div>
+      </div>
+    </div>
+
+    <div class="main-card mb-3 card">
+      <div class="card-header">
+        Organisateurs enregistrés
+      </div>
+      <div class="table-responsive">
+        <table class="align-middle mb-0 table table-striped table-hover">
+          <thead>
             <tr>
-                <th>Id_org</th>
-                <th>Nom_org</th>
-                <th>Prenom_org</th>
-                <th>Description_org</th>
-                <th>Telef</th>
-                <th>actions</th>
+              <th class="text-center">#</th>
+              <th>Nom</th>
+              <th>Prénom</th>
+              <th>Description</th>
+              <th class="text-center">Téléphone</th>
+              <th class="text-center">Actions</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for organisateur in organisateurs %}
-            <tr>
-                <td>{{ organisateur.idOrg }}</td>
+          </thead>
+          <tbody>
+            {% for organisateur in organisateurs %}
+              <tr>
+                <td class="text-center text-muted">#{{ organisateur.idOrg }}</td>
                 <td>{{ organisateur.nomOrg }}</td>
                 <td>{{ organisateur.prenomOrg }}</td>
                 <td>{{ organisateur.descriptionOrg }}</td>
-                <td>{{ organisateur.telef }}</td>
-                <td>
-                    <a href="{{ path('app_organisateur_show', {'id_org': organisateur.id_org}) }}">show</a>
-                    <a href="{{ path('app_organisateur_edit', {'id_org': organisateur.id_org}) }}">edit</a>
+                <td class="text-center">{{ organisateur.telef }}</td>
+                <td class="text-center">
+                  <a href="{{ path('app_organisateur_show', {'id_org': organisateur.idOrg}) }}" class="btn btn-sm btn-info">Détails</a>
+                  <a href="{{ path('app_organisateur_edit', {'id_org': organisateur.idOrg}) }}" class="btn btn-sm btn-warning">Modifier</a>
                 </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_organisateur_new') }}">Create new</a>
+              </tr>
+            {% else %}
+              <tr>
+                <td colspan="6" class="text-center text-muted">Aucun organisateur trouvé.</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
